# changan_dds_old

./: README.md
edc_agent/: CMakeLists.txt
edc_agent/include/: dds_node.h  edc_timer.h  hmi.h  live_msg_cx_mcu_to_edc_agent_Types.h  live_msg_oem_soc_to_mcu_Types.h  log.h
edc_agent/soa/: CMakeLists.txt  client.cpp  client.xml  server.cpp  server.xml
edc_agent/soa/dynamic/: CMakeCache.txt  Config.cpp  Config.h  Dynamic.h  Event.cpp  Event.h  Makefile  Rpc.cpp  Rpc.h  adapter.cpp  adapter.h  cmake_install.cmake  json.hpp  struct_protobuf_convert.cpp  struct_protobuf_convert.hpp
edc_agent/soa/include/changan/: base_proxy.hpp  base_skeleton.hpp  base_wait.hpp  business_util.h  cmqos.h  common_data_types.h  dds_client.hpp  dds_server.hpp  dds_util.h  domain_factory.hpp  global_config.hpp  link_count.h  local_cache.hpp  log_util.h  logconfig.h  logconfig_P.hpp  logconfig_S.hpp  qos_gen.h  soa_log.h  string_util.hpp  threadpool.hpp
edc_agent/soa/include/changan/asf/logging/: logsdk.h
edc_agent/soa/include/changan/asf/logging/logsdk/: clogger.h  common.h  formatter.hpp  initializer.hpp  log_stream.hpp  logger.hpp  logging_macro.hpp  stlformat_formatter.hpp  string_view.hpp
edc_agent/soa/include/changan/asf/logging/logsdk/details/: config.hpp  configurator.hpp  dir.hpp  file_compressor.hpp  log_level_helper.hpp  loglog.hpp  (+2 more)
edc_agent/soa/include/dds/: config.h  dds.h  features.h  version.h
edc_agent/soa/include/dds/ddsc/: dds_basic_types.h  dds_ca_diag_types.h  dds_data_allocator.h  dds_internal_api.h  dds_loan_api.h  dds_opcodes.h  dds_public_alloc.h  dds_public_error.h  dds_public_impl.h  dds_public_listener.h  dds_public_qos.h  dds_public_qosdefs.h  dds_public_status.h  dds_rhc.h  dds_statistics.h
edc_agent/soa/include/dds/ddsi/: ddsi_cdrstream.h  ddsi_cfgelems.h  ddsi_config.h  ddsi_config_impl.h  ddsi_domaingv.h  ddsi_entity_index.h  ddsi_ownip.h  ddsi_plist.h  ddsi_qoscfgelems.h  ddsi_security_msg.h  ddsi_serdata.h  ddsi_serdata_default.h  ddsi_sertype.h  ddsi_shm_transport.h  ddsi_tas.h  ddsi_tran.h  ddsi_typelib.h  ddsi_typelookup.h  ddsi_typewrap.h  ddsi_udp.h  ddsi_vendor.h  ddsi_xqos.h  ddsi_xt_impl.h  ddsi_xt_typeinfo.h  ddsi_xt_typelookup.h  ddsi_xt_typemap.h  q_addrset.h  q_debmon.h  q_entity.h  q_lease.h  q_log.h  q_misc.h  q_protocol.h  q_receive.h  q_rtps.h  q_thread.h  q_whc.h  q_xevent.h  q_xmsg.h  tas_api.h
edc_agent/soa/include/dds/ddsrt/: attributes.h  avl2.h  ca_hal_misc.h  dynlib.h  environ.h  filesystem.h  heap.h  hopscotch.h  log.h  mqueue.h  netstat.h  process.h  random.h  retcode.h  rusage.h  sockets.h  string.h  threads.h  time.h
edc_agent/soa/include/dds/ddsrt/log/: AL_Log.h  IL_Log.h  LogIf.h  caslog.h  clogger.h  common.h
edc_agent/soa/include/dds/ddsrt/sockets/: posix.h  windows.h
edc_agent/soa/include/dds/ddsrt/sync/: posix.h
edc_agent/soa/include/dds/security/: dds_security_api_defs.h
edc_agent/soa/include/ddsc/: dds.h
edc_agent/soa/include/idl/: attributes.h  endian.h  expression.h  file.h  md5.h  misc.h  print.h  processor.h  retcode.h  scope.h  stream.h  string.h  symbol.h  tree.h  version.h  visit.h
edc_agent/soa/include/idlc/: generator.h  options.h
edc_agent/soa/json/: dc2.json
edc_agent/soa/lib/j3/: libacl.la  libacl.lai  libacl.so.1.1.0  libcrypto.so.1.1  libddsc.so.1.7.2  libddscxx.so.1.7.2  libddsnotifyr.so.1.7.2  libddsnotifys.so.1.6.4  libddsnotifys.so.1.7.2  libddsrpcc.so.1  libddsrpcc.so.1.7.2  libddsrpcs.so.1.6.4  libddsrpcs.so.1.7.2  libiceoryx_binding_c.so.2.90.0  libiceoryx_hoofs.so.2.90.0  libiceoryx_platform.so.2.90.0  libiceoryx_posh.so.2.90.0  libiceoryx_posh_config.so.2.90.0  libiceoryx_posh_gateway.so.2.90.0  libiceoryx_posh_roudi.so.2.90.0
edc_agent/soa/lib/x86/: libddsrpcs.so.1.6.5
edc_agent/soa/proto/: Basc_ADASCruiseSet.proto  Basc_ADASScore.proto  Basc_ADASSecureSet.proto  Basc_ADASStorageTimes.proto  Basc_ADASvoiceCtr.proto  Basc_APAAddlObj.proto  Basc_APAFctnSta.proto  Basc_APAInteract.proto  Basc_APA_RPA_VoiceCtrl.proto  Basc_APAnotice.proto  Basc_ActSenMode.proto  Basc_DCFileUpload.proto  Basc_DTCUploadC2MCU.proto  Basc_FileTransmitServer.proto  Basc_RemoteMove.proto  Basc_SDMap.proto  Basc_VideoRecordServer.proto  Basic_APAFunctionReq.proto  Basic_ConvoyFun.proto  Basic_SectorDist.proto  Basic_StateFusion.proto  Car_Control.proto  Common.proto
edc_agent/soa/src/: business_util.cpp  cmqos.cpp  dds_client.cpp  dds_server.cpp  dds_util.cpp  domain_factory.cpp  link_count.cpp  string_util.cpp
edc_agent/soa/src/log/: clogger.cpp  common.cpp  initializer.cpp  log_stream.cpp  logconfig.cpp  logconfig_P.cpp  logconfig_S.cpp  logger.cpp  soa_log.cpp
edc_agent/soa/src/log/details/: configurator.cpp  dir.cpp  file_compressor.cpp  log_level_helper.cpp  loglog.cpp  rwmutex.cpp  utils.cpp
edc_agent/soa/src/log/logcore/: initializer_impl.cpp  logger_impl.cpp  logger_manager.cpp
edc_agent/src/: dds_event.cpp  dds_node.cpp  dds_rpc.cpp  main.cpp
(+6 files in other folders)
